--- a/index.html
+++ b/index.html
@@ -2,10 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Peter Ratemo</title>
+    <meta name="description" content="Assignment portal for Peter Ratemo in wdd230: 
+    Web Frontend Development at Brigham Young University - Idaho.">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Montserrat:ital
+    ,wght@0,100;0,200;0,300;0,700;1,100;1,200&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;1,300;1,
+    400&family=Oswald:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,
+    300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <script>
+        function loadTime() {
+            document.getElementById("lastUpdated").innerHTML = document.lastModified;
+        }
+    </script>
 </head>
 <body>
+    <header>
+        <picture>
+            <img src="images/peter1.png" alt="Peter Ratemo" width="200" height="300">
+        </picture>
+        <h1>Peter Ratemo</h1>
+    </header>
+    <main>
+        <h2>WDD 230: Assignment Portal</h2>
+        <ul>
+            <li>Lesson 01: <a href="#">Title </a><li>
+            <li>Lesson 02: <a href="#">Title </a></li>
+            <li>Lesson 03: <a href="#">Title </a></li>
+            <li>Lesson 04: <a href="#">Title </a></li>
+            <li>Lesson 05: <a href="#">Title </a></li>
+            <li>Lesson 06: <a href="#">Title </a></li>
+            <li>Lesson 07: <a href="#">Title </a></li>
+            <li>Lesson 08: <a href="#">Title </a></li>
+            <li>Lesson 09: <a href="#">Title </a></li>
+            <li>Lesson 10: <a href="#">Title </a></li
+            
+        </ul>
+    </main>
+
+    <footer>
+    <div>    
+        &copy;2022 .:|:. Peter Ratemo .:|:. Johannesburg .:|:.
+        <a href="https://byui.edu/online">BYU-Idaho Online</a><br>
+        <p>Last updated</p>
+        <div id="lastUpdated">
+        <body  onload="loadTime();">
+        </div>
+    </footer>
+    <script src="js/date.js"></script>
     
 </body>
 </html>
