--- a/index.html
+++ b/index.html
@@ -31,27 +31,29 @@
         <h1>Peter Ratemo</h1>
     </header>
     <main>
-        <h2>WDD 230: Assignment Portal</h2>
+        <h2>WDD 230: Web Frontend Development</h2>
+        <h2>Learning Activities</h2>
         <ul>
-            <li>Lesson 01: <a href="#">Title </a><li>
-            <li>Lesson 02: <a href="#">Title </a></li>
-            <li>Lesson 03: <a href="#">Title </a></li>
-            <li>Lesson 04: <a href="#">Title </a></li>
-            <li>Lesson 05: <a href="#">Title </a></li>
-            <li>Lesson 06: <a href="#">Title </a></li>
-            <li>Lesson 07: <a href="#">Title </a></li>
-            <li>Lesson 08: <a href="#">Title </a></li>
-            <li>Lesson 09: <a href="#">Title </a></li>
-            <li>Lesson 10: <a href="#">Title </a></li
+            <li>01: <a href="#"></a><li>
+            <li>02: <a href="#"></a></li>
+            <li>03: <a href="#"></a></li>
+            <li>04: <a href="#"></a></li>
+            <li>05: <a href="#"></a></li>
+            <li>06: <a href="#"></a></li>
+            <li>07: <a href="#"></a></li>
+            <li>08: <a href="#"></a></li>
+            <li>09: <a href="#"></a></li>
+            <li>10: <a href="#"></a></li
             
         </ul>
+        <h2>Information</h2>
     </main>
 
     <footer>
     <div>    
-        &copy;2022 .:|:. Peter Ratemo .:|:. Johannesburg .:|:.
+        &copy;2022 | Peter Ratemo | Johannesburg |
         <a href="https://byui.edu/online">BYU-Idaho Online</a><br>
-        <p>Last updated</p>
+        <p>Last Updated</p>
         <div id="lastUpdated">
         <body  onload="loadTime();">
         </div>
